@@ -2,10 +2,12 @@
 HEADERS += \
 ImportExport/IImportExport.h \
 ImportExport/ImportNMEA.h \
+ImportExport/ExportGPX.h \
 ImportExport/ImportExportOsmBin.h
 
 #Source files
 SOURCES += \
 ImportExport/IImportExport.cpp \
 ImportExport/ImportNMEA.cpp \
+ImportExport/ExportGPX.cpp \
 ImportExport/ImportExportOsmBin.cpp
